--- a/Emulator/JS/style.css
+++ b/Emulator/JS/style.css
@@ -13,44 +13,10 @@ body {
     font-size: 20px;
     margin: 0;
     overflow: hidden;
-    background-color: #222
-}
-
-body,
-#box {
+    background-color: #222;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#box {
-    text-align: center;
-    color: #aaa;
-    height: 100px;
-    width: 250px;
-    background-color: #333;
-    border-radius: 0.4em;
-    border: 2px solid #555;
-    position: relative;
-    flex-direction: column;
-    transition-duration: 0.2s;
-    overflow: hidden
-}
-
-#box:hover,
-#box[drag] {
-    border-color: #38f;
-    color: #ddd
-}
-
-#input {
-    cursor: pointer;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0
 }
 
 #display {
@@ -60,6 +26,7 @@ body,
 
 select,
 button {
+    outline: transparent;
     padding: 0.6em 0.4em;
     margin: 0.5em;
     width: 15em;
@@ -75,6 +42,37 @@ button {
     transition-duration: 0.2s
 }
 
+#box {
+    margin: 0em 1em;
+    font-size: 16px;
+    width: 240px;
+    max-width: 100%;
+    text-align: center;
+    color: #aaa;
+    background-color: #444;
+    border-radius: 0.4em;
+    border: 1px solid #555;
+    position: relative;
+    flex-direction: column;
+    transition-duration: 0.2s;
+    overflow: hidden
+}
+
+
+#input {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: transparent;
+    opacity: 0;
+}
+
+#input::file-selector-button {
+    background-color: transparent;
+    color: transparent;
+    border: 0px transparent;
+}
+
 #container {
     text-align: center;
 }
@@ -85,8 +83,22 @@ button {
     font-weight: bold;
 }
 
+body[drag]>#box{
+    border-color: #38f;
+    background-color: #666;
+    color: #ddd
+}
+
+#box:hover,
+#box[drag] {
+    border-color: #38f;
+    background-color: #666;
+    color: #ddd
+}
+
 select:hover,
 button:hover {
+    border-color: #38f;
     background-color: #666;
     color: #ddd
 }
