--- a/Application Files/DOS/assets/css/js-dos.css
+++ b/Application Files/DOS/assets/css/js-dos.css
@@ -1,3 +1,19 @@
+html,
+body,
+#jsdos {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#img{
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 .emulator-root {
     background: black;
     overflow: hidden;
